--- a/styles/addEmployee.css
+++ b/styles/addEmployee.css
@@ -84,7 +84,7 @@
 /* Take note etong aprt na to lahat ng forms natin connected dito sa addEmployee */
 .addEmployee {
   position: fixed;
-  z-index: 10;
+  z-index: 1001;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -124,7 +124,7 @@
     }
   }
 
-  .con {
+  .con, .container {
     background-color: var(--containerColor);
     width: 25rem;
     max-width: 100%;
